@@ -7,5 +7,5 @@ Bug #22207 (missing 0 when using the e notation in *printf functions)
 ?>
 --EXPECT--
 1.1000e+0
-string(17) "       1.1000e+0
+string(11) " 1.1000e+0
 "
